Getting rid of classes and id's

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
   <body>
     <header>
       <nav>
-        <a id="logo" href="index.html"><img src="./images/logoBlack.svg" alt="Logo More Air." /></a>
+        <a href="index.html"><img src="./images/logoBlack.svg" alt="Logo More Air." /></a>
 
         <input id="toggle" type="checkbox" aria-hidden="true" />
-        <label class="hamburger" for="toggle" aria-hidden="true">
+        <label for="toggle" aria-hidden="true">
           <!-- Unchecked state -->
           <svg class="unchecked" width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M25 23.5L7 23.5" stroke="#151614" stroke-width="2.65" stroke-linecap="round" />
@@ -31,7 +31,7 @@
           </svg>
         </label>
 
-        <ul class="nav">
+        <ul>
           <li><a href="index.html">About</a></li>
           <li><a href="work.html">Work</a></li>
           <li><a href="#">Contact</a></li>
@@ -41,7 +41,7 @@
 
     <main>
       <h1>Design the future today</h1>
-      <header class="main-header">
+      <header>
         <h2>We move brands to their next chapter</h2>
         <button>
           <svg width="48" height="48" viewBox="0 0 48 48">
@@ -52,7 +52,7 @@
         </button>
       </header>
 
-      <video id="firstVideo" title="A quick rundown of all sorts of applications that we made." poster="./images/posterVideoHome.jpg" loop playsinline controls>
+      <video title="A quick rundown of all sorts of applications that we made." poster="./images/posterVideoHome.jpg" loop playsinline controls>
         <source src="./videos/homepageStart.mp4" type="video/mp4" />
         Your browser does not support the video.
       </video>
@@ -63,8 +63,8 @@
             <source src="./videos/homepageStrategy.mp4" type="video/mp4" />
             Your browser does not support the video.
           </video>
-            <h3 class="text-header">Strategy</h3>
-            <p class="text-content">Our process starts with strategic anchoring, grasping clients' goals, user needs, and evaluating current products and usage data.</p>
+            <h3>Strategy</h3>
+            <p class="p-belowtext">Our process starts with strategic anchoring, grasping clients' goals, user needs, and evaluating current products and usage data.</p>
         </article>
 
         <article>
@@ -72,8 +72,8 @@
             <source src="./videos/homepageDesign.mp4" type="video/mp4" />
             Your browser does not support the video.
           </video>
-            <h3 class="text-header">Design</h3>
-            <p class="text-content">Through our dedication to design, we focus on scalable systems, testing, prototyping, and building to make visions a reality.</p>
+            <h3>Design</h3>
+            <p class="p-belowtext">Through our dedication to design, we focus on scalable systems, testing, prototyping, and building to make visions a reality.</p>
         </article>
 
         <article>
@@ -81,8 +81,8 @@
             <source src="./videos/homepageBrand.mp4" type="video/mp4" />
             Your browser does not support the video.
           </video>
-            <h3 class="text-header">Brand</h3>
-            <p class="text-content">At our studio, branding is a journey that builds lasting relationships and unleashes the full potential of our clients' products.</p>
+            <h3>Brand</h3>
+            <p class="p-belowtext">At our studio, branding is a journey that builds lasting relationships and unleashes the full potential of our clients' products.</p>
         </article>
 
         <article>
@@ -90,8 +90,8 @@
             <source src="./videos/homepageTechnology.mp4" type="video/mp4" />
             Your browser does not support the video.
           </video>
-            <h3 class="text-header">Technology</h3>
-            <p class="text-content">Embracing the latest innovations, we integrate emerging tech and leverage cutting-edge tools to enhance possibilities.</p>
+            <h3>Technology</h3>
+            <p class="p-belowtext">Embracing the latest innovations, we integrate emerging tech and leverage cutting-edge tools to enhance possibilities.</p>
         </article>
       </section>
 
@@ -100,7 +100,7 @@
           <h3>Industries</h3>
           <p>We collaborate with industry leaders in robotics, telecoms, AI, and electric vehicles to achieve impactful results.</p>
         </article>
-        <aside class="right-content"> <!-- Used for content that's related to the main content -->
+        <aside> <!-- Used for content that's related to the main content -->
           <ul>
             <li>Tech</li>
             <li>Media</li>
@@ -119,7 +119,7 @@
 
       <section class="industries">
         <article class="industries-article">
-          <ol class="industries-list">
+          <ol>
             <li>
               <h4>50+</h4>
               <p>Brand team-ups</p>
@@ -258,7 +258,7 @@
           </li>
         </ol>
         <div class="container-button">
-          <button id="viewButton">View all work →</button>
+          <button>View all work →</button>
         </div>
       </section>
 
@@ -268,32 +268,32 @@
             <source src="./videos/homepageWeScale.mp4" type="video/mp4" />
             Your browser does not support the video.
           </video>
-            <h3 class="text-header">We scale</h3>
-            <p class="text-content">We gather requirements to establish the team structure, and collaborate with the client's design team or work independently.</p>
+            <h3>We scale</h3>
+            <p class="p-belowtext">We gather requirements to establish the team structure, and collaborate with the client's design team or work independently.</p>
         </article>
         <article>
           <video title="A compass." poster="./images/weExplore.jpg" loop playsinline controls>
             <source src="./videos/homepageWeExplore.mp4" type="video/mp4" />
             Your browser does not support the video.
           </video>
-            <h3 class="text-header">We explore</h3>
-            <p class="text-content">We study the product, research data, market trends and user behaviour before exploring options with the client to set goals.</p>
+            <h3>We explore</h3>
+            <p class="p-belowtext">We study the product, research data, market trends and user behaviour before exploring options with the client to set goals.</p>
         </article>
         <article>
           <video title="Journey of multiple steps in a process of a project." poster="./images/weExecute.jpg" loop playsinline controls>
             <source src="./videos/homepageWeExecute.mp4" type="video/mp4" />
             Your browser does not support the video.
           </video>
-            <h3 class="text-header">We execute</h3>
-            <p class="text-content">We develop a roadmap, define milestones, design, prototype and test before build, with our clients involved at every stage.</p>
+            <h3>We execute</h3>
+            <p class="p-belowtext">We develop a roadmap, define milestones, design, prototype and test before build, with our clients involved at every stage.</p>
         </article>
         <article>
           <video title="Different geometric objects being combined into one." poster="./images/weIterate.jpg" loop playsinline controls>
             <source src="./videos/homepageWeIterate.mp4" type="video/mp4" />
             Your browser does not support the video.
           </video>
-            <h3 class="text-header">We iterate</h3>
-            <p class="text-content">We adjust the product based on feedback and usage data to enhance functionality, ensuring continuous improvements.</p>
+            <h3>We iterate</h3>
+            <p class="p-belowtext">We adjust the product based on feedback and usage data to enhance functionality, ensuring continuous improvements.</p>
         </article>
       </section>
 
@@ -327,7 +327,7 @@
       <section>
         <h2 id="letsWork">Let's work together</h2>
         <div class="container-button">
-          <button id="sayButton">Say hello →</button>
+          <button>Say hello →</button>
         </div>
       </section>
 
@@ -344,7 +344,7 @@
       <p>© More Air 2024</p>
 
       <!--Social media links-->
-      <ul class="social-media">
+      <ul>
         <li title="Instagram">
           <a href="#">
             <svg width="1em" viewBox="0 0 24 24">
