--- a/work.html
+++ b/work.html
@@ -14,10 +14,10 @@
   <body>
     <header>
       <nav>
-        <a id="logo" href="index.html"><img src="./images/logoBlack.svg" alt="Logo More Air." /></a>
+        <a href="index.html"><img src="./images/logoBlack.svg" alt="Logo More Air." /></a>
 
         <input id="toggle" type="checkbox" aria-hidden="true">
-        <label class="hamburger" for="toggle" aria-hidden="true">
+        <label for="toggle" aria-hidden="true">
           <!-- Unchecked state -->
           <svg class="unchecked" width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M25 23.5L7 23.5" stroke="#151614" stroke-width="2.65" stroke-linecap="round" />
@@ -31,17 +31,17 @@
           </svg>
         </label>
 
-            <ul class="nav">
-                <li><a href="index.html">About</a></li>
-                <li><a href="work.html">Work</a></li>
-                <li><a href="#">Contact</a></li>
+            <ul>
+              <li><a href="index.html">About</a></li>
+              <li><a href="work.html">Work</a></li>
+              <li><a href="#">Contact</a></li>
             </ul>
       </nav>
     </header>
 
     <main>
       <h1>Cobot Brand System</h1>
-      <header class="main-header">
+      <header>
         <h2>Defining Cobot's journey to a unidied brand identity.</h2>
         <button>
           <svg width="48" height="48" viewBox="0 0 48 48">
@@ -82,14 +82,14 @@
         <figure class="media-container">
           <img src="./images/cobotLogoColour.jpg" alt="Color namelogo of Cobot.">
           <img src="./images/cobotLogoBlack2.jpg" alt="Different variations of the namelogo of Cobot.">
-          <div class="video-pair">
+          <figure class="video-pair">
             <video title="A black and white animated smile (the logo)." poster="./images/smileyBlack.jpg" loop playsinline controls>
               <source src="./videos/cobotSmiley1.mp4" type="video/mp4">
             </video>
             <video title="A coloured, animated smile (the logo)." poster="./images/smiley.jpg" loop playsinline controls>
               <source src="./videos/cobotSmiley2.mp4" type="video/mp4">
             </video>
-          </div>
+          </figure>
         </figure>
       </section>      
 
@@ -159,7 +159,7 @@
 
       <section>
         <h2>More work</h2>
-        <ol>
+        <ul>
           <li>
             <img src="./images/nokiaPureDesignSystem.jpg" alt="Blue circle with the Nokia logo." />
             <h3>Nokia Pure Design System</h3>
@@ -170,13 +170,13 @@
             <h3>Nokia Smart Lightning</h3>
             <p>Smart home minimalism</p>
           </li>
-        </ol>
+        </ul>
       </section>
 
       <section>
         <h2 id="letsWork">Let's work together</h2>
         <div class="container-button">
-          <button id="sayButton">Say hello →</button>
+          <button>Say hello →</button>
         </div>
       </section>
 
@@ -193,7 +193,7 @@
       <p>© More Air 2024</p>
 
       <!--Social media links-->
-      <ul class="social-media">
+      <ul>
         <li>
           <a href="#" title="Instagram">
             <svg width="1em" viewBox="0 0 24 24">
